# jobmarket_analyzer

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  NOTICE.md  Project_Objectives.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-automerge.yml  lint-workflows.yml  pages.yml  refresh.yml  scorecard.yml
config/companies/: dublin_tech.yaml
config/esco/: README.md  isco08_labels.parquet
config/runs/: data_analyst_ireland.yaml
docs/: adding-a-benchmark.md  adding-a-source.md  architecture.md  ci-cd-practices.md  dashboard_data_gaps.md  dashboard_strategy.md  data-history-design.md  github-setup.md  open-questions.md  operations.md
docs/history/: v1-claude-md.md  v2-dagster-spec.md
docs/sessions/: 2026-05-11-bootstrap-p0-p1.md  2026-05-11-p1-live-verification.md  2026-05-11-p2-normalise.md  2026-05-11-p3-ats-adapters.md  2026-05-14-p4-benchmarks-isco.md  README.md
scripts/: build_esco_snapshot.py
site/: .gitignore  observablehq.config.js  package.json
site/scripts/: smoke.mjs
site/src/: index.md
site/src/components/: barChart.js  coverageNote.js  filters.js  heatmap.js  isco.js  kpiCard.js
site/src/data/: manifest.json.js  postings.parquet.js
src/jobpipe/: __init__.py  cli.py  dedupe.py  duckdb_io.py  fx.py  gate.py  llm.py  normalise.py  runner.py  schemas.py  settings.py
src/jobpipe/benchmarks/: __init__.py  _common.py  cso.py  eurostat.py  oecd.py
src/jobpipe/isco/: __init__.py  loader.py  tagger.py
src/jobpipe/sources/: __init__.py  _companies.py  adzuna.py  ashby.py  greenhouse.py  lever.py  personio.py
tests/: conftest.py  test_cli.py  test_dedupe.py  test_duckdb_io.py  test_fx.py  test_gate.py  test_license_audit.py  test_llm_stub.py  test_log_redaction.py  test_normalise.py  test_preset_validation.py  test_runner.py  test_settings.py  test_smoke.py
tests/benchmarks/: test_common.py  test_cso.py  test_eurostat.py  test_oecd.py
tests/fixtures/adzuna/: search_page1.json  search_page2_empty.json
tests/fixtures/ashby/: board_empty.json  board_notion.json
tests/fixtures/benchmarks/cso/: sample.json
tests/fixtures/benchmarks/eurostat/: sample.json
tests/fixtures/benchmarks/oecd/: sample.json
tests/fixtures/greenhouse/: board_edge_cases.json  board_empty.json  board_intercom.json  board_stripe.json
tests/fixtures/lever/: postings_edge_cases.json  postings_palantir.json
tests/fixtures/personio/: feed_dublin.xml  feed_empty.xml
tests/isco/: test_loader.py  test_tagger.py
tests/sources/: test_adzuna.py  test_ashby.py  test_companies.py  test_greenhouse.py  test_lever.py  test_personio.py
