[project]
name = "jobpipe"
version = "0.0.1"
description = "Modular, free-tier job-market intelligence pipeline. Daily ingest from public APIs, normalise to Parquet, overlay official salary benchmarks, visualise on GitHub Pages."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Alex Wu", email = "alex.w.w.h@gmail.com" }]
keywords = ["jobs", "salary", "analytics", "duckdb", "observable-framework", "github-pages"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

dependencies = [
    "httpx>=0.27",
    "tenacity>=9.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "pyarrow>=18.0",
    "duckdb>=1.1",
    "pandera>=0.21",
    "rapidfuzz>=3.10",
    "python-dateutil>=2.9",
    "typer>=0.13",
    "openai>=1.55",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-recording>=0.13",
    "pytest-httpserver>=1.1",
    "hypothesis>=6.115",
    "types-PyYAML>=6.0",
    "types-python-dateutil>=2.9",
    "pandas-stubs>=2.2",
]

[project.scripts]
jobpipe = "jobpipe.cli:app"

[project.urls]
Repository = "https://github.com/USER/jobmarket_analyzer"
Documentation = "https://github.com/USER/jobmarket_analyzer#readme"
Issues = "https://github.com/USER/jobmarket_analyzer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobpipe"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = ["E501"]  # line length handled by ruff format

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]  # allow asserts

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["src/jobpipe"]

[[tool.mypy.overrides]]
module = ["pandera.*", "rapidfuzz.*", "duckdb.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["src/jobpipe"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
